src/Domain/Compiler/Tests/Expression/IntegerLiteral/DecimalLiteral/__Baselines__/DecimalLiteral_S64MaxOverflow-StashIr.error
error: Decimal literal cannot exceed S64_Max
--> main.hs:8:8
  | 
8 | return 9223372036854775808;    
  |        ^^^^^^^^^^^^^^^^^^^
